--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,7 +8,7 @@
     <h1>Homepage</h1>
     <img class="img-fluid rounded mx-auto d-block" src="{% static 'images/IMG_0075.jpg' %}">
     {% if user.is_authenticated %}
-        <p>Hi {{ user.email }}!</p>
+        <p>Hi {{ user.email }}! test push branch</p>
         <p><a href="{%  url 'account_logout' %}">Log Out</a></p>
     {% else %}
         <p>You are not logged in.</p>
