--- a/templates/_base.html
+++ b/templates/_base.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>{% block title %}Home{% endblock title %}</title>
+  <title>{% block title %}{% trans "Home" %}{% endblock title %}</title>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Bootstrap core CSS -->
@@ -56,7 +56,7 @@
 
       <!-- Brand -->
       <a class="navbar-brand waves-effect" href="https://mdbootstrap.com/docs/jquery/" target="_blank">
-        <strong class="blue-text">MDB</strong>
+        <strong class="blue-text">Krowkaramel</strong>
       </a>
 
       <!-- Collapse -->
@@ -71,21 +71,20 @@
         <!-- Left -->
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link waves-effect" href="#">Home
+            <a class="nav-link waves-effect" href="{% url 'home' %}">{% trans "Home" %}
               <span class="sr-only">(current)</span>
             </a>
           </li>
+{#          <li class="nav-item">#}
+{#            <a class="nav-link waves-effect" href="{% url 'blog/' %}" target="_blank">{% trans "News" %}</a>#}
+{#          </li>#}
           <li class="nav-item">
-            <a class="nav-link waves-effect" href="https://mdbootstrap.com/docs/jquery/" target="_blank">About MDB</a>
+            <a class="nav-link waves-effect" href="{% url 'shop:product_list' %}"
+              target="_blank">{% trans "E-shop" %}</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link waves-effect" href="https://mdbootstrap.com/docs/jquery/getting-started/download/"
-              target="_blank">Free download</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link waves-effect" href="https://mdbootstrap.com/education/bootstrap/" target="_blank">Free
-              tutorials</a>
-          </li>
+{#          <li class="nav-item">#}
+{#            <a class="nav-link waves-effect" href="{% url 'dash/' %}" target="_blank">{% trans "Dashboard" %}</a>#}
+{#          </li>#}
         </ul>
 
         <!-- Right -->
@@ -120,21 +119,44 @@
     </div>
   </nav>
   <!-- Navbar -->
+
   {% block content %}
   {% endblock content %}
+
 <!--Footer-->
 <footer class="page-footer text-center font-small mt-4 wow fadeIn">
 
 <!--Call to action-->
 <div class="pt-4">
-  <a class="btn btn-outline-white" href="https://mdbootstrap.com/docs/jquery/getting-started/download/" target="_blank"
-    role="button">Download MDB
-    <i class="fas fa-download ml-2"></i>
-  </a>
-  <a class="btn btn-outline-white" href="https://mdbootstrap.com/education/bootstrap/" target="_blank" role="button">Start
-    free tutorial
-    <i class="fas fa-graduation-cap ml-2"></i>
-  </a>
+    <a class="btn btn-outline-white" href="" target="_blank" role="button">
+        Presse
+    <i class="fas fa-newspaper ml-2"></i>
+    </a>
+    <a class="btn btn-outline-white" href="" target="_blank" role="button">
+        Contact
+    <i class="fas fa-envelope ml-2"></i>
+    </a>
+    <a class="btn btn-outline-white" href="" target="_blank" role="button">
+        Devenir revendeur
+    <i class="fas fa-euro-sign ml-2"></i>
+    </a>
+    <a class="btn btn-outline-white" href="" target="_blank" role="button">
+        CGV
+    <i class="fas fa-pen ml-2"></i>
+    </a>
+    <a class="btn btn-outline-white" href="" target="_blank" role="button">
+        Livraison
+    <i class="fas fa-truck ml-2"></i>
+    </a>
+    <a class="btn btn-outline-white" href="" target="_blank" role="button">
+        Langue
+    <i class="fas fa-language ml-2 fa-lg"></i>
+    </a>
+    <div class="mt-3">
+        <i class="fab fa-cc-visa ml-5 fa-3x"></i>
+        <i class="fab fa-cc-paypal ml-2 fa-3x"></i>
+    </div>
+
 </div>
 <!--/.Call to action-->
 
@@ -142,43 +164,37 @@
 
 <!-- Social icons -->
 <div class="pb-4">
-  <a href="https://www.facebook.com/mdbootstrap" target="_blank">
-    <i class="fab fa-facebook-f mr-3"></i>
-  </a>
+    Suivez-nous sur :
+    <a href="" target="_blank">
+        <i class="fab fa-facebook-f mr-3"></i>
+    </a>
 
-  <a href="https://twitter.com/MDBootstrap" target="_blank">
-    <i class="fab fa-twitter mr-3"></i>
-  </a>
+    <a href="" target="_blank">
+        <i class="fab fa-twitter mr-3"></i>
+    </a>
 
-  <a href="https://www.youtube.com/watch?v=7MUISDJ5ZZ4" target="_blank">
-    <i class="fab fa-youtube mr-3"></i>
-  </a>
+    <a href="" target="_blank">
+        <i class="fab fa-youtube mr-3"></i>
+    </a>
 
-  <a href="https://plus.google.com/u/0/b/107863090883699620484" target="_blank">
-    <i class="fab fa-google-plus-g mr-3"></i>
-  </a>
+    <a href="" target="_blank">
+        <i class="fab fa-google-plus-g mr-3"></i>
+    </a>
 
-  <a href="https://dribbble.com/mdbootstrap" target="_blank">
-    <i class="fab fa-dribbble mr-3"></i>
-  </a>
+    <a href="" target="_blank">
+        <i class="fab fa-linkedin mr-3"></i>
+    </a>
 
-  <a href="https://pinterest.com/mdbootstrap" target="_blank">
-    <i class="fab fa-pinterest mr-3"></i>
-  </a>
+    <a href="" target="_blank">
+        <i class="fab fa-pinterest mr-3"></i>
+    </a>
 
-  <a href="https://github.com/mdbootstrap/bootstrap-material-design" target="_blank">
-    <i class="fab fa-github mr-3"></i>
-  </a>
-
-  <a href="http://codepen.io/mdbootstrap/" target="_blank">
-    <i class="fab fa-codepen mr-3"></i>
-  </a>
 </div>
 <!-- Social icons -->
 
 <!--Copyright-->
 <div class="footer-copyright py-3">
-  © 2019 Copyright:
+  © 2022 Copyright:
   <a href="https://mdbootstrap.com/education/bootstrap/" target="_blank"> MDBootstrap.com </a>
 </div>
 <!--/.Copyright-->
