--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,14 +5,16 @@
 {% block title %}Homepage{% endblock title %}
 
 {% block content %}
+    <p>fill</p>
+    <p>fill</p>
     <h1>Homepage</h1>
     <img class="img-fluid rounded mx-auto d-block" src="{% static 'images/IMG_0075.jpg' %}">
     {% if user.is_authenticated %}
-        <p>Hi {{ user.email }}!</p>
-        <p><a href="{%  url 'account_logout' %}">Log Out</a></p>
+        <p class="ml-2">Hi {{ user.username }}!</p>
+        <p><a class="ml-2" href="{%  url 'account_logout' %}">Log Out</a></p>
     {% else %}
-        <p>You are not logged in.</p>
-        <a href="{% url 'account_login' %}">Log In</a> |
+        <p class="ml-2" >You are not logged in.</p>
+        <a class="ml-2" href="{% url 'account_login' %}">Log In</a> |
         <a href="{% url 'account_signup' %}">Sign Up</a>
     {% endif %}
 {%  endblock content %}
