--- a/templates/client/client.html
+++ b/templates/client/client.html
@@ -4,14 +4,41 @@
 {% block title %}Client{% endblock title %}
 
 {% block content %}
-    {% if user.is_authenticated %}
-        <p>fill</p>
-        <p>fill</p>
-        <p class="ml-5">username : {{ user.username }}</p>
-        <p class="ml-5">email : {{ user.email }}</p>
-        <p class="ml-5">password : {{ user.password }}</p>
-        <p></p>
-        <p><a href="{%  url 'account_logout' %}">Log Out</a></p>
+{% if user.is_authenticated %}
+<p>fill</p>
+<p>fill</p>
+<h1 class="ml-5 mb-5">Client information</h1>
+<div class="row">
+    <div class="col-sm ml-5">
+        <p>username : {{ user.username }}</p>
+        <p>email : {{ user.email }}</p>
+        <button type="button" class="btn btn-light btn-sm mb-3">Change email</button>
+        <p>password : *******</p>
+        <button type="button" class="btn btn-light btn-sm mb-3 ">Change password</button>
+        <div>
+            <p>gender </p>
+            <div class="form-check form-check-inline">
+
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                    value="option1">
+                <label class="form-check-label" for="inlineRadio1">Homme</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                    value="option2">
+                <label class="form-check-label" for="inlineRadio2">Femme</label>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm">
+    </div>
+    <div class="col-sm">
+    </div>
+</div>
+
+
+
+<p><a href="{%  url 'account_logout' %}">Log Out</a></p>
 {% else %}
 
 
