--- a/templates/client/client.html
+++ b/templates/client/client.html
@@ -15,24 +15,54 @@
         <button type="button" class="btn btn-light btn-sm mb-3">Change email</button>
         <p>password : *******</p>
         <button type="button" class="btn btn-light btn-sm mb-3 ">Change password</button>
-        <div>
-            <p>gender </p>
-            <div class="form-check form-check-inline">
+        <p>Telephone number: user.telephone</p>
+        <button type="button" class="btn btn-light btn-sm mb-3 ">Change number</button>
+        <p>gender </p>
+        <div class="form-check form-check-inline">
 
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
-                    value="option1">
-                <label class="form-check-label" for="inlineRadio1">Homme</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                    value="option2">
-                <label class="form-check-label" for="inlineRadio2">Femme</label>
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+            <label class="form-check-label" for="inlineRadio1">Homme</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+            <label class="form-check-label" for="inlineRadio2">Femme</label>
+        </div>
+        <p class="mt-3">type de client ? (faut trouver mieux) </p>
+        <div class="form-check form-check-inline">
+
+            <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="inlineRadio1" value="option1">
+            <label class="form-check-label" for="inlineRadio1">Particulier</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="inlineRadio2" value="option2">
+            <label class="form-check-label" for="inlineRadio2">Entreprise</label>
+        </div>
+
+    </div>
+    <div class="col-sm">
+    </div>
+    <div class="col-sm">
+        <div class="card card-block d-flex mb-5" style="height: 4rem;width: 18rem;" >
+            <div class="card-body align-items-center d-flex justify-content-center">
+                <a class="stretched-link" style="color: inherit;text-decoration: inherit;" href="#">
+                    Order history
+                </a>
             </div>
         </div>
-    </div>
-    <div class="col-sm">
-    </div>
-    <div class="col-sm">
+        <div class="card card-block d-flex mb-5" style="height: 4rem;width: 18rem;">
+            <div class="card-body align-items-center d-flex justify-content-center">
+                <a class="stretched-link" style="color: inherit;text-decoration: inherit;" href="#">
+                    Current order
+                </a>
+            </div>
+        </div>
+        <div class="card card-block d-flex mb-5" style="height: 4rem;width: 18rem;">
+            <div class="card-body align-items-center d-flex justify-content-center">
+                <a class="stretched-link" style="color: inherit;text-decoration: inherit;" href="#">
+                    Subscription
+                </a>
+            </div>
+        </div>
     </div>
 </div>
 
