commentaire sinon ca marche pas

--- a/templates/client/client.html
+++ b/templates/client/client.html
@@ -15,17 +15,17 @@
         <button type="button" class="btn btn-light btn-sm mb-3">Change email</button>
         <p>password : *******</p>
         <button type="button" class="btn btn-light btn-sm mb-3 ">Change password</button>
-        <p>Telephone number: user.telephone</p>
+        <p>Phone number: user.phone </p>
         <button type="button" class="btn btn-light btn-sm mb-3 ">Change number</button>
-        <p>gender </p>
+        <p>Gender </p>
         <div class="form-check form-check-inline">
 
             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-            <label class="form-check-label" for="inlineRadio1">Homme</label>
+            <label class="form-check-label" for="inlineRadio1">Male</label>
         </div>
         <div class="form-check form-check-inline">
             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-            <label class="form-check-label" for="inlineRadio2">Femme</label>
+            <label class="form-check-label" for="inlineRadio2">Female</label>
         </div>
         <p class="mt-3">type de client ? (faut trouver mieux) </p>
         <div class="form-check form-check-inline">
@@ -42,7 +42,7 @@
     <div class="col-sm">
     </div>
     <div class="col-sm">
-        <div class="card card-block d-flex mb-5" style="height: 4rem;width: 18rem;" >
+        <div class="card card-block d-flex mb-5" style="height: 4rem;width: 18rem;">
             <div class="card-body align-items-center d-flex justify-content-center">
                 <a class="stretched-link" style="color: inherit;text-decoration: inherit;" href="#">
                     Order history
