--- a/templates/client/client.html
+++ b/templates/client/client.html
@@ -27,7 +27,7 @@
             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
             <label class="form-check-label" for="inlineRadio2">Female</label>
         </div>
-        <p class="mt-3">type de client ? (faut trouver mieux) </p>
+        <p class="mt-3">Status</p>
         <div class="form-check form-check-inline">
 
             <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="inlineRadio1" value="option1">
