--- a/templates/cart/cart_detail.html
+++ b/templates/cart/cart_detail.html
@@ -5,4 +5,325 @@
 
 {% block title %}{% trans 'Cart' %}{% endblock title %}
 
-{% block content %}{% endblock content %}
+{% block content %}
+    <!--Main layout-->
+{#  <main class="mt-5 pt-4">#}
+{#    <div class="container wow fadeIn">#}
+{##}
+{#      <!-- Heading -->#}
+{#      <h2 class="my-5 h2 text-center">{% trans "Checkout form" %}</h2>#}
+{##}
+{#      <!--Grid row-->#}
+{#      <div class="row">#}
+{##}
+{#        <!--Grid column-->#}
+{#        <div class="col-md-8 mb-4">#}
+{##}
+{#          <!--Card-->#}
+{#          <div class="card">#}
+{##}
+{#            <!--Card content-->#}
+{#            <form class="card-body">#}
+{##}
+{#              <!--Grid row-->#}
+{#              <div class="row">#}
+{##}
+{#                <!--Grid column-->#}
+{#                <div class="col-md-6 mb-2">#}
+{##}
+{#                  <!--firstName-->#}
+{#                  <div class="md-form ">#}
+{#                    <input type="text" id="firstName" class="form-control">#}
+{#                    <label for="firstName" class="">{% trans "First name" %}</label>#}
+{#                  </div>#}
+{##}
+{#                </div>#}
+{#                <!--Grid column-->#}
+{##}
+{#                <!--Grid column-->#}
+{#                <div class="col-md-6 mb-2">#}
+{##}
+{#                  <!--lastName-->#}
+{#                  <div class="md-form">#}
+{#                    <input type="text" id="lastName" class="form-control">#}
+{#                    <label for="lastName" class="">{% trans "Last name" %}</label>#}
+{#                  </div>#}
+{##}
+{#                </div>#}
+{#                <!--Grid column-->#}
+{##}
+{#              </div>#}
+{#              <!--Grid row-->#}
+{##}
+{#              <!--Username-->#}
+{#              <div class="md-form input-group pl-0 mb-5">#}
+{#                <div class="input-group-prepend">#}
+{#                  <span class="input-group-text" id="basic-addon1">@</span>#}
+{#                </div>#}
+{#                <input type="text" class="form-control py-0" placeholder="Username" aria-describedby="basic-addon1">#}
+{#              </div>#}
+{##}
+{#              <!--email-->#}
+{#              <div class="md-form mb-5">#}
+{#                <input type="text" id="email" class="form-control" placeholder="youremail@example.com">#}
+{#                <label for="email" class="">{% trans "Email (optional)" %}</label>#}
+{#              </div>#}
+{##}
+{#              <!--address-->#}
+{#              <div class="md-form mb-5">#}
+{#                <input type="text" id="address" class="form-control" placeholder="1234 Main St">#}
+{#                <label for="address" class="">{% trans "Address" %}</label>#}
+{#              </div>#}
+{##}
+{#              <!--address-2-->#}
+{#              <div class="md-form mb-5">#}
+{#                <input type="text" id="address-2" class="form-control" placeholder="Apartment or suite">#}
+{#                <label for="address-2" class="">{% trans "Address 2 (optional)" %}</label>#}
+{#              </div>#}
+{##}
+{#              <!--Grid row-->#}
+{#              <div class="row">#}
+{##}
+{#                <!--Grid column-->#}
+{#                <div class="col-lg-4 col-md-12 mb-4">#}
+{##}
+{#                  <label for="country">{% trans "Country" %}</label>#}
+{#                  <select class="custom-select d-block w-100" id="country" required>#}
+{#                    <option value="">{% trans "Choose..." %}</option>#}
+{#                    <option>{% trans "United States" %}</option>#}
+{#                  </select>#}
+{#                  <div class="invalid-feedback">#}
+{#                    {% trans "Please select a valid country." %}#}
+{#                  </div>#}
+{##}
+{#                </div>#}
+{#                <!--Grid column-->#}
+{##}
+{#                <!--Grid column-->#}
+{#                <div class="col-lg-4 col-md-6 mb-4">#}
+{##}
+{#                  <label for="state">{% trans "State" %}</label>#}
+{#                  <select class="custom-select d-block w-100" id="state" required>#}
+{#                    <option value="">{% trans "Choose..." %}</option>#}
+{#                    <option>{% trans "California" %}</option>#}
+{#                  </select>#}
+{#                  <div class="invalid-feedback">#}
+{#                    {% trans "Please provide a valid state." %}#}
+{#                  </div>#}
+{##}
+{#                </div>#}
+{#                <!--Grid column-->#}
+{##}
+{#                <!--Grid column-->#}
+{#                <div class="col-lg-4 col-md-6 mb-4">#}
+{##}
+{#                  <label for="zip">{% trans "Zip" %}</label>#}
+{#                  <input type="text" class="form-control" id="zip" placeholder="" required>#}
+{#                  <div class="invalid-feedback">#}
+{#                    {% trans "Zip code required." %}#}
+{#                  </div>#}
+{##}
+{#                </div>#}
+{#                <!--Grid column-->#}
+{##}
+{#              </div>#}
+{#              <!--Grid row-->#}
+{##}
+{#              <hr>#}
+{##}
+{#              <div class="custom-control custom-checkbox">#}
+{#                <input type="checkbox" class="custom-control-input" id="same-address">#}
+{#                <label class="custom-control-label" for="same-address">#}
+{#                    {% trans "Shipping address is the same as my billing address" %}#}
+{#                </label>#}
+{#              </div>#}
+{#              <div class="custom-control custom-checkbox">#}
+{#                <input type="checkbox" class="custom-control-input" id="save-info">#}
+{#                <label class="custom-control-label" for="save-info">#}
+{#                    {% trans "Save this information for next time" %}#}
+{#                </label>#}
+{#              </div>#}
+{##}
+{#              <hr>#}
+{##}
+{#              <div class="d-block my-3">#}
+{#                <div class="custom-control custom-radio">#}
+{#                  <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked required>#}
+{#                  <label class="custom-control-label" for="credit">{% trans "Credit card" %}</label>#}
+{#                </div>#}
+{#                <div class="custom-control custom-radio">#}
+{#                  <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required>#}
+{#                  <label class="custom-control-label" for="debit">{% trans "Debit card" %}</label>#}
+{#                </div>#}
+{#                <div class="custom-control custom-radio">#}
+{#                  <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required>#}
+{#                  <label class="custom-control-label" for="paypal">{% trans "Paypal" %}</label>#}
+{#                </div>#}
+{#              </div>#}
+{#              <div class="row">#}
+{#                <div class="col-md-6 mb-3">#}
+{#                  <label for="cc-name">{% trans "Name on card" %}</label>#}
+{#                  <input type="text" class="form-control" id="cc-name" placeholder="" required>#}
+{#                  <small class="text-muted">{% trans "Full name as displayed on card" %}</small>#}
+{#                  <div class="invalid-feedback">#}
+{#                    {% trans "Name on card is required" %}#}
+{#                  </div>#}
+{#                </div>#}
+{#                <div class="col-md-6 mb-3">#}
+{#                  <label for="cc-number">{% trans "Credit card number" %}</label>#}
+{#                  <input type="text" class="form-control" id="cc-number" placeholder="" required>#}
+{#                  <div class="invalid-feedback">#}
+{#                    {% trans "Credit card number is required" %}#}
+{#                  </div>#}
+{#                </div>#}
+{#              </div>#}
+{#              <div class="row">#}
+{#                <div class="col-md-3 mb-3">#}
+{#                  <label for="cc-expiration">{% trans "Expiration" %}</label>#}
+{#                  <input type="text" class="form-control" id="cc-expiration" placeholder="" required>#}
+{#                  <div class="invalid-feedback">#}
+{#                    {% trans "Expiration date required" %}#}
+{#                  </div>#}
+{#                </div>#}
+{#                <div class="col-md-3 mb-3">#}
+{#                  <label for="cc-expiration">{% trans "CVV" %}</label>#}
+{#                  <input type="text" class="form-control" id="cc-cvv" placeholder="" required>#}
+{#                  <div class="invalid-feedback">#}
+{#                    {% trans "Security code required" %}#}
+{#                  </div>#}
+{#                </div>#}
+{#              </div>#}
+{#              <hr class="mb-4">#}
+{#              <button class="btn btn-primary btn-lg btn-block" type="submit">#}
+{#                  {% trans "Continue to checkout" %}#}
+{#              </button>#}
+{##}
+{#            </form>#}
+{##}
+{#          </div>#}
+{#          <!--/.Card-->#}
+{##}
+{#        </div>#}
+{#        <!--Grid column-->#}
+{##}
+{#        <!--Grid column-->#}
+{#        <div class="col-md-4 mb-4">#}
+{##}
+{#          <!-- Heading -->#}
+{#          <h4 class="d-flex justify-content-between align-items-center mb-3">#}
+{#            <span class="text-muted">{% trans "Your cart" %}</span>#}
+{#            <span class="badge badge-secondary badge-pill">3</span>#}
+{#          </h4>#}
+{##}
+{#          <!-- Cart -->#}
+{#          <ul class="list-group mb-3 z-depth-1">#}
+{#            <li class="list-group-item d-flex justify-content-between lh-condensed">#}
+{#              <div>#}
+{#                <h6 class="my-0">{% trans "Product name" %}</h6>#}
+{#                <small class="text-muted">{% trans "Brief description" %}</small>#}
+{#              </div>#}
+{#              <span class="text-muted">$12</span>#}
+{#            </li>#}
+{#            <li class="list-group-item d-flex justify-content-between bg-light">#}
+{#              <div class="text-success">#}
+{#                <h6 class="my-0">{% trans "Promo code" %}</h6>#}
+{#                <small>EXAMPLECODE</small>#}
+{#              </div>#}
+{#              <span class="text-success">-$5</span>#}
+{#            </li>#}
+{#            <li class="list-group-item d-flex justify-content-between">#}
+{#              <span>{% trans "Total (EUR)" %}</span>#}
+{#              <strong>{{ cart.get_total_price }}</strong>#}
+{#            </li>#}
+{#          </ul>#}
+{#          <!-- Cart -->#}
+{##}
+{#          <!-- Promo code -->#}
+{#          <form class="card p-2">#}
+{#            <div class="input-group">#}
+{#              <input type="text" class="form-control" placeholder="Promo code" aria-label="Recipient's username" aria-describedby="basic-addon2">#}
+{#              <div class="input-group-append">#}
+{#                <button class="btn btn-secondary btn-md waves-effect m-0" type="button">Redeem</button>#}
+{#              </div>#}
+{#            </div>#}
+{#          </form>#}
+{#          <!-- Promo code -->#}
+{##}
+{#        </div>#}
+{#        <!--Grid column-->#}
+{##}
+{#      </div>#}
+{#      <!--Grid row-->#}
+{##}
+{#    </div>#}
+{#  </main>#}
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <h1>{% trans "Your shopping cart" %}</h1>
+    {{ cart.cart.values }}
+
+    <table class="cart">
+        <thead>
+            <tr>
+                <th>{% trans "Image" %}</th>
+                <th>{% trans "Product" %}</th>
+                <th>{% trans "Quantity" %}</th>
+                <th>{% trans "Remove" %}</th>
+                <th>{% trans "Unit price" %}</th>
+                <th>{% trans "Price" %}</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for item in cart %}
+                {% with product=item.product %}
+                    <tr>
+                        <td>
+                            <div class="col-lg-4 col-sm-6">
+                                <a href="{{ product.get_absolute_url }}">
+                                <img src="
+                                    {% if product.images %}
+                                        {% for image in product.images.first %}
+                                                {{ image.url }}
+                                        {% endfor %}
+                                    {% else %}
+                                            {% static "img/no_image.png" %}
+                                    {% endif %}" alt="{{ product.name }}">
+                                </a>
+                            </div>
+                        </td>
+                        <td>{{ product.name }}</td>
+                        <td>
+                            <form action="{% url 'cart:cart_add' product.id %}" method="post">
+                                {{ item.update_quantity_form.quantity }}
+                                {{ item.update_quantity_form.update }}
+                                <input type="submit" value="{% trans 'Update' %}">
+                                {% csrf_token %}
+                            </form>
+                        </td>
+                        <td>
+                            <a href="{% url 'cart:cart_remove' product.id %}">
+                                {% trans "Remove" %}
+                            </a>
+                        </td>
+                        <td class="num">{{ item.price }} €</td>
+                        <td class="num">{{ item.total_price }} €</td>
+                    </tr>
+                {% endwith %}
+            {% endfor %}
+            <tr class="total">
+                <td>{% trans "Total" %}</td>
+                <td colspan="4"></td>
+                <td class="num">{{ cart.get_total_price }} €</td>
+            </tr>
+        </tbody>
+    </table>
+    <p class="text-right">
+        <a href="{% url 'shop:product_list' %}" class="button light">
+            {% trans "Continue shopping" %}
+        </a>
+        <a href="#" class="button">{% trans "Checkout" %}</a>
+    </p>
+  <!--Main layout-->
+{% endblock content %}
