ajout logo_final format svg

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -12,8 +12,8 @@
   <meta property="og:title" content="KrowKaramel"/>
   <meta property="og:type" content="e-shop"/>
   <meta property="og:url" content=""/>
-  <meta property="og:image" content=""/>
-  <meta name="twitter:image" content="" />
+  <meta property="og:image" content="images/logo_final.svg"/>
+  <meta name="twitter:image" content="images/logo_final.svg"/>
   <meta property="twitter:image:alt" content="logo" />
   <meta name="twitter:card" content="" />
   <meta name="twitter:site" content="" />
