--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,9 +1,31 @@
 /* static/css/base.css */
-h1 {
-    color: red;
+html,
+body,
+header,
+.carousel {
+  height: 60vh;
 }
 
-.product-img {
-    height: 300px;
-    width: auto;
+img {
+  object-fit: cover;
+}
+
+@media (max-width: 740px) {
+
+  html,
+  body,
+  header,
+  .carousel {
+    height: 100vh;
+  }
+}
+
+@media (min-width: 800px) and (max-width: 850px) {
+
+  html,
+  body,
+  header,
+  .carousel {
+    height: 100vh;
+  }
 }
