--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -143,7 +143,7 @@
   <!--/.Carousel Wrapper-->
 
   <!--Main layout-->
-  <main>
+  <section>
     <div class="container">
 
       <!--Navbar-->
@@ -263,46 +263,52 @@
       <!--Section: Products v.3-->
 
       <!--Pagination-->
+
+
+
+
+        {% if products.has_next %}
+            <a href="?page={{ products.next_page_number }}">next</a>
+            <a href="?page={{ products.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
       <nav class="d-flex justify-content-center wow fadeIn">
         <ul class="pagination pg-blue">
 
           <!--Arrow left-->
           <li class="page-item disabled">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-              <span class="sr-only">Previous</span>
-            </a>
+              {% if products.has_previous %}
+                    <a class="page-link" href="?page=1" aria-label="Previous">
+                        <span aria-hidden="true">&laquo; {% trans "First" %}</span>
+                    </a>
+                    <a href="?page={{ products.previous_page_number }}">
+                        <span class="sr-only">{% trans "Previous" %}</span>
+                    </a>
+              {% endif %}
           </li>
 
           <li class="page-item active">
             <a class="page-link" href="#">1
-              <span class="sr-only">(current)</span>
+              <span class="sr-only">
+                Page {{ products.number }} of {{ products.paginator.num_pages }}.
+              </span>
             </a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">2</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">3</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">4</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">5</a>
           </li>
 
           <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-              <span class="sr-only">Next</span>
-            </a>
+            {% if products.has_previous %}
+                    <a class="page-link" href="?page={{ products.next_page_number }}" aria-label="Next">
+                        <span class="sr-only">{% trans "Next" %}</span>
+                    </a>
+                    <a href="?page={{ products.paginator.num_pages }}">
+                        <span aria-hidden="true">{% trans "Last" %} &laquo;</span>
+                    </a>
+            {% endif %}
           </li>
         </ul>
       </nav>
       <!--Pagination-->
 
     </div>
-  </main>
+  </section>
   <!--Main layout-->
 {% endblock content %}
